tests/fixtures/fail/infer_expected_conflict.sali
let Cell(T: type) = struct(value: T)

let main(): i32 = {
  let cell: Cell(bool) = Cell(_)(42)
  42
}
